--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: "Roboto Mono", monospace;
   background-color: #e8f6ef;
 }
 
